# PHANTOM-TAG

./: .gitignore  README.md
backend/: .env.example  package-lock.json  package.json  server.js
backend/routes/: assets.js  dashboard.js  enforcer.js  mock-platform.js  scout.js
backend/services/: email-simulator.js  firestore.js  pdf-generator.js
engine/: app.py  pyproject.toml
engine/fingerprint/: __init__.py  cnn_hash.py  pca_model.py
engine/storage/: __init__.py  local_store.py
engine/watermark/: __init__.py  payload.py  qim_dct.py  video.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChannelBuilder.jsx  ConfidenceMeter.jsx  FileUploader.jsx  Navbar.jsx  StatsCard.jsx  ViolationFeed.jsx
frontend/src/pages/: Dashboard.jsx  Register.jsx  Scout.jsx  ViolationDetail.jsx
scripts/: fit_pca_model.py  generate_test_video.py
